# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bodyrectangle.cpp  bodyrectangle.h  foodrectangle.h  globaldefs.h  growrectangle.h  main.cpp  snakebody.cpp  snakebody.h
.github/workflows/: build.yml
src/: CMakeLists.txt  globaldefs.h  main.cpp
src/core/: CMakeLists.txt  bodyrectangle.h  foodrectangle.h  game.cpp  game.h  snakebody.cpp  snakebody.h
src/ui/: CMakeLists.txt  keyhandler.h  mainmenu.cpp  mainmenu.h
